feat: enabled selection of multiple timers in both timer tables